# ohmywu

./: .gitignore  Cargo.toml  README.md  package.json  plan.md  pnpm-workspace.yaml
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
apps/electron/: package.json
apps/electron/src/: main.js
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/public/live2d/ug/: ugofficial.model3.json
apps/web/public/live2d/xingye/: -.-.exp3.json  -.-.motion3.json  0.0.exp3.json  0.0.motion3.json  1.1.exp3.json  1.1.motion3.json  items_pinned_to_model.json  lmouce .exp3.json  lmouce .motion3.json  mouth.exp3.json  mouth.motion3.json  n,n.exp3.json  (+30 more)
apps/web/src/: App.vue  env.d.ts  main.ts  style.css
apps/web/src/components/: ConfirmDialog.vue  Live2DPet.vue  LoadingOverlay.vue  Toast.vue
apps/web/src/lib/: api.ts
apps/web/src/router/: index.ts
apps/web/src/views/: ActionsView.vue  AuditsView.vue  ConversationView.vue  LogsView.vue  OverviewView.vue  ProcessesView.vue  ServicesView.vue  StorageView.vue  SystemCenterView.vue  TasksOverviewView.vue  TasksView.vue
book/: architecture.md
crates/action-registry/: Cargo.toml
crates/action-registry/src/: lib.rs
crates/agent-kernel/: Cargo.toml
crates/agent-kernel/src/: lib.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/command-runner/: Cargo.toml
crates/command-runner/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/linux-adapter/: Cargo.toml
crates/linux-adapter/src/: lib.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: lib.rs
crates/reference-resolver/: Cargo.toml
crates/reference-resolver/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/task-engine/: Cargo.toml
crates/task-engine/src/: lib.rs
crates/tool-registry/: Cargo.toml
crates/tool-registry/src/: lib.rs
crates/toolkit-system-management/: Cargo.toml
crates/toolkit-system-management/src/: lib.rs
crates/workflow-registry/: Cargo.toml
crates/workflow-registry/src/: lib.rs
desktop/: index.html  package.json  vite.config.ts
desktop/dist-electron/: main.js  preload.js
desktop/electron/: main.ts  preload.ts
desktop/src/: App.vue  env.d.ts  main.ts  style.css
desktop/src/components/: TitleBar.vue
desktop/src/views/: ActionsView.vue  ConversationView.vue  OverviewView.vue  SystemView.vue
