[workspace]
members = [
  "apps/daemon",
  "crates/domain",
  "crates/action-registry",
  "crates/tool-registry",
  "crates/workflow-registry",
  "crates/reference-resolver",
  "crates/policy-engine",
  "crates/task-engine",
  "crates/audit",
  "crates/store",
  "crates/agent-kernel",
  "crates/toolkit-system-management",
  "crates/linux-adapter",
  "crates/command-runner",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["OhMyWu"]

[workspace.dependencies]
axum = { version = "0.7.9", features = ["json"] }
chrono = { version = "0.4.38", features = ["clock", "serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.1", features = ["cors"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
